# PythonProject9

./: .flake8  .gitignore  README.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  run_app.py  test_app.py  user_settings.json
data/: operations.xlsx  sample_data.py
src/: api_client.py  config.py  main.py  reports.py  services.py  utils.py  views.py
tests/: conftest.py  test_api_client.py  test_main.py  test_reports.py  test_services.py  test_utils.py  test_views.py
tests/reports/: monthly_summary_20231220_000000.json  spending_by_category_20250930_225857.json  spending_by_weekday_20250930_225857.json  spending_by_workday_20250930_225857.json  test_function_20231220_153000.json
