[tool.poetry]
name = "transaction-analyzer"
version = "0.1.0"
description = "Анализатор банковских транзакций"
authors = ["Fox-IK <ilya-kim-1999@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.13"
masks = "^0.1.3"
python-dotenv = "^1.1.1"
requests = "^2.32.5"
pandas = "^2.3.2"
pytest = ">=7.0.0"
pytest-cov = ">=4.0.0"
openpyxl = ">=3.0.0"
pytest-mock = ">=3.10.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.3.0"
mypy = "^1.17.0"
black = "^25.1.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 119
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 119

[tool.mypy]
strict = true
ignore_missing_imports = true
disallow_untyped_defs = true
warn_return_any = true
