[tool.poetry]
name = "transaction-analyzer"
version = "1.0.0"
description = "Bank transaction analysis application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
pydantic = "^1.10.12"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.0"
cachetools = ">=5.3.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"

