[tool.poetry]
name = "transaction-analyzer"
version = "1.0.0"
description = "Bank transaction analysis application"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.0.0"
openpyxl = "^3.1.0"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
pydantic = "^1.10.12"
python-dotenv = "^1.0.0"
aiohttp = "^3.8.0"
cachetools = ">=5.3.0"
pytest-asyncio = ">=0.21.0"
black = ">=23.12.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.11.0"
pytest-cov = "^4.1.0"
black = "^25.9.0"
isort = "^6.0.1"
mypy = "^1.18.2"

[tool.black]
line-length = 120
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  | \.eggs
  | \.git
  | \.venv
  | build
  | dist
  # files
  | poetry\.lock
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120
known_first_party = ["your_package_name"]  # Замените на имя вашего пакета
skip_glob = ["**/migrations/*"]  # Опционально: исключить миграции

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
enable_error_code = ["ignore-without-code"]

[[tool.mypy.overrides]]
module = [
    "django.*",  # Если используете Django
    "celery.*",  # Если используете Celery
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
